<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="56dp"
        android:layout_height="109dp"
        android:gravity="center"
        android:text="@string/score"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.364" />

    <TextView
        android:id="@+id/Score1"
        android:layout_width="171dp"
        android:layout_height="106dp"
        android:gravity="center"
        android:text="@string/_0"
        android:textSize="100sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.368" />

    <TextView
        android:id="@+id/Score2"
        android:layout_width="164dp"
        android:layout_height="107dp"
        android:gravity="center"
        android:text="@string/_0"
        android:textSize="100sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.368" />

    <Button
        android:id="@+id/Plus1"
        android:layout_width="70dp"
        android:layout_height="51dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:text="@string/Plus"
        app:layout_constraintEnd_toStartOf="@+id/Score1"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Player1" />

    <Button
        android:id="@+id/Minus1"
        android:layout_width="68dp"
        android:layout_height="53dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:text="@string/Minus"
        app:layout_constraintEnd_toStartOf="@+id/Score1"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Plus1" />

    <Button
        android:id="@+id/Plus2"
        android:layout_width="70dp"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="44dp"
        android:text="@string/Plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/Score2"
        app:layout_constraintTop_toBottomOf="@+id/Player2" />

    <Button
        android:id="@+id/Minus2"
        android:layout_width="68dp"
        android:layout_height="53dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="44dp"
        android:text="@string/Minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/Score2"
        app:layout_constraintTop_toBottomOf="@+id/Plus2" />

    <TextView
        android:id="@+id/Player2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="52dp"
        android:text="@string/player_2"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.1"
        app:layout_constraintStart_toEndOf="@+id/Score2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Player1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:text="@string/player_1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/Score1"
        app:layout_constraintHorizontal_bias="0.100"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <TextView
        android:id="@+id/Half1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:text="@string/_0"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Minus1"
        app:layout_constraintTop_toBottomOf="@+id/Score1"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/Half2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="116dp"
        android:text="@string/_0"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Minus2"
        app:layout_constraintTop_toBottomOf="@+id/Score2"
        app:layout_constraintVertical_bias="0.009" />

    <TextView
        android:id="@+id/Winner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text=""
        android:textSize="35sp"
        android:textColor="#FF0000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/serve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/the_serve_is_for_player_1"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/restart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/restart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.981"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>